# aletheia

./: .gitignore  API_SPEC.md  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
docs/: STRATEGY.md
examples/: resolve_identity.py
scripts/: mock_feed.py
src/: main.py  mock_agent_test.py
src/deduper/: chunker.py  engine.py
src/mcp_server/: gateway.py
src/ontology/: resolver.py
tests/: test_conflict.py
